# pydantic-json-patch

./: LICENSE  README.md  pyproject.toml
pydantic_json_patch/: __init__.py  models.py  patcher.py
tests/: test_models.py  test_patcher.py  test_pydantic_json_patch.py
tests/specs/: test.json
tests/test_specification/: test_main_spec.py  test_spec.py
