[tool.poetry]
name = "pydantic-json-patch"
version = "0.1.0"
description = ""
authors = ["Sergey Tsaplin <me@sergeytsaplin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
